Update CORS configuration to allow all origins and headers